2007-12-09  Stefan Kost  <ensonic@users.sf.net>

	* FSM/ArpMan/ArpMan.cpp:
	* FSM/Chorus/Chorus.cpp:
	* FSM/Infector/Channel.cpp:
	* FSM/Infector/Filters.cpp:
	* FSM/Infector/Infector.cpp:
	* FSM/Infector/Infector.h:
	* FSM/Infector/Track.cpp:
	* FSM/Infector/Vegetable.cpp:
	* FSM/Kick/Kick.cpp:
	* FSM/dspchips/DSPChips.h:
	  Add license headers.

2007-11-25  Stefan Kost  <ensonic@users.sf.net>

	* FSM/Infector/Infector.cpp:
	* FSM/Infector/Infector.h:
	  Use MAX_BUFFER_LENGTH in code. Remove some assert that where added to
	  track the problem but add one for numsamples.

	* common/MachineInterface.h:
	  Comment what MAX_BUFFER_LENGTH is used for.

2007-11-24  Stefan Kost  <ensonic@users.sf.net>

	* FSM/Infector/Infector.cpp:
	* FSM/Infector/Infector.h:
	  Enlarge fixed PWMBuffers. Remove debug log.

2007-11-23  Stefan Kost  <ensonic@users.sf.net>

	* FSM/Infector/Infector.cpp:
	* FSM/Infector/Vegetable.cpp:
	  More debug logging. Enable destructor.

2007-11-23  Stefan Kost  <ensonic@users.sf.net>

	* FSM/Infector/Infector.cpp:
	* FSM/Infector/Infector.h:
	  Some more debug logging and cleanups.

2007-11-21  Stefan Kost  <ensonic@users.sf.net>

	* FSM/Infector/Channel.cpp:
	* FSM/Infector/Filters.cpp:
	* FSM/Infector/Infector.cpp:
	* FSM/Infector/Track.cpp:
	* FSM/Infector/Vegetable.cpp:
	* FSM/Makefile.am:
	* FSM/dspchips/DSPChips.h:
	  Cleanup the sources a bit. Try to free the generated wave, but
	  disabled now as valgrind does not yet like it.

2007-11-19  Stefan Kost  <ensonic@users.sf.net>

	* FSM/Infector/Infector.cpp:
	* FSM/Infector/Makefile.am:
	* FSM/dspchips/DSPChips.h:
	  More porting. Now loads fine.

2007-11-13  Stefan Kost  <ensonic@users.sf.net>

	* configure.ac:
	  Also create Makefile for Infector, but not yet build by default.

2007-11-13  Krzysztof Foltman  <kfoltman@users.sourceforge.net>

	* FSM/Infector/Channel.cpp:
	* FSM/Infector/Filters.cpp:
	* FSM/Infector/Infector.cpp:
	* FSM/Infector/Infector.h:
	* FSM/Infector/Makefile.am: